--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Rainlonely
 subtitle:
 description:
-author: John Doe
-language:
+author: Rain Wu
+language: Chinese
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://rainlonely.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
